增加var类型推断的使用